Re-added map and fixed spacing

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,3 +1,3 @@
 #map {
-  height: 0vh;
+  height: 100vh;
 }
